--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "vite": "^4.4.5"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
@@ -34,7 +36,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "globals": "^16.4.0",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "tailwindcss": "^3.3.3"
   }
 }
