--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend for Thekua e-commerce website",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run build",
     "preview": "vite preview",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "globals": "^16.4.0",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vite": "^7.1.5"
   }
 }
