fix: move vite to dependencies for Vercel build

--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend for Thekua e-commerce website",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build",
+    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
