--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^7.0.1",
     "google-auth-library": "^10.1.0",
     "helmet": "^7.0.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
