Update .env and code for Vercel deployment

--- a/server/.env.example
+++ b/server/.env.example
@@ -37,4 +37,4 @@ UPLOAD_DIR=uploads
 MAX_FILE_SIZE=5242880
 
 # CORS Configuration (for production)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://yourproductiondomain.com
+ALLOWED_ORIGINS=https://desimithaas.vercel.app
