--- a/server/package.json
+++ b/server/package.json
@@ -22,22 +22,11 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.10.0",
-    "express-validator": "^7.0.1",
-    "google-auth-library": "^10.1.0",
-    "helmet": "^7.0.0",
-    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.9.4",
-    "razorpay": "^2.9.6",
-    "stripe": "^18.3.0"
+    "mongoose": "^7.5.0"
   },
   "devDependencies": {
     "jest": "^29.6.2",
